# book-friend-analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analysis/: 01_metadata.ipynb  02_reviews.ipynb  03_sentiment_analysis.ipynb  04_review_summarizer.ipynb  05_migrate.ipynb  06_recommendation.ipynb
core/: config.py
db/: __init__.py  mongo.py  postgres.py
db/sql/: 001_schema.sql
models/: __init__.py  users.py
nlp/: __init__.py  review_summarizer.py  sentiment_analysis.py
