[project]
name = "book-friend-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "langdetect>=1.0.9",
    "notebook>=7.4.5",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tqdm>=4.67.1",
]
